<resources>
    <string name="app_name">Ime</string>

    <string name="statistics">Statistics</string>
    <string name="informations">Informations</string>
    <string name="photos">Photos</string>

    <string name="kitchen">Kitchen</string>
    <string name="met">Met</string>
    <string name="enter_office">Enter office</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zoom_info">Zoom: %.1fx</string>
    <string name="zoom_default">Zoom: 1.0x</string>

    <string name="menu_add_photo">Add a photo</string>

    <string name="prompt_add">Add</string>
    <string name="prompt_paste">Paste</string>
    <string name="prompt_cancel">Cancel</string>

</resources>
