<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        />

    <Button
        android:id="@+id/button_paste"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_add"
        android:gravity="center"
        android:text="@string/prompt_paste"
        android:background="@android:color/transparent"
        />
    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toEndOf="@id/button_paste"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        android:gravity="center"
        android:text="@string/prompt_add"
        android:background="@android:color/transparent"
        android:enabled="false"
        />
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toEndOf="@id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/prompt_cancel"
        android:background="@android:color/transparent"
        />

</android.support.constraint.ConstraintLayout>